Restore original fonts with a fallback to inter